--- a/index.html
+++ b/index.html
@@ -344,7 +344,67 @@
 
     </section>
 
+    <!--FEATHURE SECTION 2-->
+    <section class="bg-[url(./images/feature-section-2BG.svg)] bg-no-repeat bg-cover pb-[350px] mt-14 pt-[10rem]  overflow-hidden ">
+        <div class="w-10/12 relative  pt-4 mx-auto max-w-[1080px]">
+            <h1 class="font-mullish  text-white leading-[1.2] text-2xl text-center font-bold">Explore Razorpay Business Banking</h1>
+            <div class="w-6 h-1 bg-greenLight mx-auto mt-4 mb-20"></div>
+            <!-- MAIN FEATURE BOX-->
+            <div class="mx-auto w-full min-h-[440px] flex relative pt-4">
+                <img src="./images/x-flame-1.png" alt="" loading="lazy" class=" -top-[142px]  left-[10px] w-[200px] absolute">
+                <img src="./images/x-flame-2.png" loading="lazy" alt="" class=" absolute top-[150px]    right-[-180px] w-[270px]">
+                <!--content box-->
+                <div class="w-full  flex    relative py-12 p-10 bg-[#181c2e] border z-20 rounded-md border-slate-700">
+                    <!-- left part wala-->
+                    <div class=" flex flex-col justify-between items-start h-full w-full">
+                        <div class="flex gap-y-12 flex-col">
+                            <h2 class="font-mullish text-white text-[28px] font-bold leading-10 max-w-[500px]">Manage your company’s finances with <img src="./images/razorpayX.svg" alt="" height="32px" width="168px" class="inline"> <span class="text-greenLight ">Business Banking</span></h2>
+                            <ul class="space-y-2 ">
+                                <li class=" flex items-center text-white space-x-2">
+                                    <i data-feather="check" class="text-greenLight"></i>
+                                    <span>Open a fully digital current account</span>
+                                </li>
+                                <li class=" flex items-center text-white space-x-2">
+                                    <i data-feather="check" class="text-greenLight"></i>
+                                    <span>Automate payables & compliment payments</span>
+                                </li>
+                                <li class=" flex items-center text-white space-x-2">
+                                    <i data-feather="check" class="text-greenLight"></i> <span>Simplify and track spends with Corporate cards</span>
+                                </li>
+                                <li class=" flex items-center text-white space-x-2">
+                                    <i data-feather="check" class="text-greenLight"></i> <span>View financial insights at a glance</span>
+                                </li>
+                            </ul>
+                            <div class="flex flex-row w-full items-center space-x-4">
+                                <button class="relative bg-lightBlue300 transition-all flex items-center justify-start   py-[14px] px-[18px] font-bold font-mullish  rounded-md text-sm text-white md:pr-[90px]  hover:bg-lightBlue500 transation-200"> 
+                                    Sign Up
+                                 <div class="w-12 h-[60px] right-6  bg-greenLight absolute skew-x-[20deg] flex  justify-center items-center ">  <!--arrow-->
+                                    <svg
+                                    viewBox="0 0 24 24"
+                                    focusable="false"
+                                    class="   w-[20px] h-[20px]  ">
+                                  <path
+                                      fill="currentColor"
+                                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
+                                    ></path>
+                                  </svg></div>
+                                 
+                                </button>
+                                <!--hyperlink-->
+                                <div class=" flex flex-row  items-center ">
+                                    <a href="# " class="font-mullish font-bold cursor-pointer text-lightBlue500 group-hover:bg-lightBlue transition-all duration-200">know more</a><i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 group-hover:text-lightBlue transition-all transition-duration-200"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!--BACKGROUND IMAGE-->
+                        <img src="./images/buisness-banking.png " alt=" " class=" max-w-[600px] absolute right-0 bottom-0 hidden:max-w-[400px] md:block lg:max-w-[600px] ">
+                    </div>
+                </div>
 
+
+            </div>
+        </div>
+    </section>
 
 
 
