--- a/index.html
+++ b/index.html
@@ -403,11 +403,283 @@
 
 
             </div>
+            <!-- CARD BOX-->
+            <div class=" grid grid-cols-3 w-full gap-6 my-14 ">
+                <!--BOX1-->
+                <div class=" w-full  min-h-[15rem] cursor-pointer relative ">
+                    <img src="./images/payment-link-icon.svg" alt="" class=" bg-lightBlue absolute right-3 top-3 w-12 h-12  rounded-full z-[8 ] transition-all duration-200">
+                    <!--BOX SHAPE-->
+                    <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" class="svgbox boxstroke-1 stroke-[#818597] h-full w-full absolute z-[9] transition-all duration-200  " style="stroke-opacity: 0.15">
+                     <path
+        d="m 0 6 
+    a 6 6 0 0 1 6 -6 
+    h 250.32501220703125 
+    a 16 16 0 0 1 11 5 
+    l 77 77 
+    a 16 16 0 0 1 5 11 
+    v 126 
+    a 6 6 0 0 1 -6 6 
+    h -337.32501220703125 
+    a 6 6 0 0 1 -6 -6 
+    z"
+        fill="#fff"
+                   ></path>
+         </svg>
+                    <!--BOX CONTENT-->
+                    <div class="absolute z-[1000] flex  h-full w-full justify-between flex-col pl-5 py-5 px-8 ">
+                        <!--TEXT WALA-->
+                        <h3 class="font-mullish font-bold text-white leading-[1.2] text-[1.375rem]">Payment Links</h3>
+                        <p class="font-mullish text-grayText  mt-6">Create, Copy & Collect With Payment Button. Collect one time or subscription payments & more</p>
+
+                        <!--HYPERLINK WALA PART-->
+                        <div class=" flex items-center cursor-pointer hover:text-gray-50 transition-all duration-200">
+                            <a href="#" class="font-mullish font-bold text-lightBlue500 hover:text-grayBlue transition-all duration-200">Know More</a>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue50 hover:text-grayBlue transition-all duration-200"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <!--BOX2-->
+                <div class=" w-full  min-h-[15rem] cursor-pointer relative">
+                    <img src="./images/payment-link-icon.svg" alt="" class=" bg-lightBlue absolute right-3 top-3 w-12 h-12  rounded-full z-[8 ] transition-all duration-200">
+                    <!--BOX SHAPE-->
+                    <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" class="svgbox boxstroke-1 stroke-[#818597] h-full w-full absolute z-[9] transition-all duration-200" style="stroke-opacity: 0.15">
+  <path
+        d="m 0 6 
+    a 6 6 0 0 1 6 -6 
+    h 250.32501220703125 
+    a 16 16 0 0 1 11 5 
+    l 77 77 
+    a 16 16 0 0 1 5 11 
+    v 126 
+    a 6 6 0 0 1 -6 6 
+    h -337.32501220703125 
+    a 6 6 0 0 1 -6 -6 
+    z"
+        fill="#fff"
+  ></path>
+         </svg>
+                    <!--BOX CONTENT-->
+                    <div class="absolute z-[1000] flex  h-full w-full justify-between flex-col pl-5 py-5 px-8 bg-transparent">
+                        <!--TEXT WALA-->
+                        <h3 class="font-mullish font-bold text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+                        <p class="font-mullish text-grayText  mt-6">Create, Copy & Collect With Payment Button. Collect one time or subscription payments & more</p>
+
+                        <!--HYPERLINK WALA PART-->
+                        <div class=" flex items-center cursor-pointer hover:text-gray-50 transition-all duration-200">
+                            <a href="#" class="font-mullish font-bold text-lightBlue500 hover:text-grayBlue transition-all duration-200">Know More</a>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue50 hover:text-grayBlue transition-all duration-200"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <!--BOX3-->
+
+                <div class=" w-full  min-h-[15rem] cursor-pointer relative">
+                    <img src="./images/payment-link-icon.svg" alt="" class=" bg-lightBlue absolute right-3 top-3 w-12 h-12  rounded-full z-[8 ] transition-all duration-200">
+                    <!--BOX SHAPE-->
+                    <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" class="svgbox boxstroke-1 stroke-[#818597] h-full w-full absolute z-[9] transition-all duration-200" style="stroke-opacity: 0.15">
+  <path
+        d="m 0 6 
+    a 6 6 0 0 1 6 -6 
+    h 250.32501220703125 
+    a 16 16 0 0 1 11 5 
+    l 77 77 
+    a 16 16 0 0 1 5 11 
+    v 126 
+    a 6 6 0 0 1 -6 6 
+    h -337.32501220703125 
+    a 6 6 0 0 1 -6 -6 
+    z"
+        fill="#fff"
+  ></path>
+         </svg>
+                    <!--BOX CONTENT-->
+                    <div class="absolute z-[1000] flex  h-full w-full justify-between flex-col pl-5 py-5 px-8 bg-transparent ">
+                        <!--TEXT WALA-->
+                        <h3 class="font-mullish font-bold text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+                        <p class="font-mullish text-grayText  mt-6">Create, Copy & Collect With Payment Button. Collect one time or subscription payments & more</p>
+
+                        <!--HYPERLINK WALA PART-->
+                        <div class=" flex items-center cursor-pointer hover:text-gray-50 transition-all duration-200">
+                            <a href="#" class="font-mullish font-bold text-lightBlue500 hover:text-grayBlue transition-all duration-200">Know More</a>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue50 hover:text-grayBlue transition-all duration-200"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--demo box-->
+            <div class=" w-full flex flex-row items-center justify-between border border-slate-700 mb-24  gap-y-6 relative rounded-md p-8">
+                <p class="font-mullish text-white  text-xl">
+                    cheack out the live demo to learn the razorpay works
+                    <span class="font-bold "> No sign up  required</span>
+                </p>
+                <button class="relative bg-lightBlue300 transition-all flex items-center justify-start   py-[14px] px-[18px] font-bold font-mullish  rounded-md text-sm text-white md:pr-[90px]  hover:bg-lightBlue500 transation-200"> 
+                    Cheack out the demo
+                 <div class="w-12 h-[60px] right-6  bg-greenLight absolute skew-x-[20deg] flex  justify-center items-center ">  <!--arrow-->
+                    <svg
+                    viewBox="0 0 24 24"
+                    focusable="false"
+                    class="   w-[20px] h-[20px]  ">
+                  <path
+                      fill="currentColor"
+                      d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
+                    ></path>
+                  </svg>
+                </div>
+                 
+                </button>
+
+            </div>
+
+        </div>
         </div>
     </section>
 
+    <!--New features -->
+    <section class="bg-white relative">
+        <div class="relative w-11/12  max-w-[1080px] mx-auto pt-4">
+            <img src="./images/feature-section1-dottedrows.png" class="absolute w-[233px] left-[300px] -top-[6rem] z-[10]" loading="lazy" alt="">
+            <img src="./images/feature-section1-dottedrows.png" class="absolute w-[233px] right-5 -top-[6rem] z-[10]" loading="lazy" alt="">
+            <div class="w-full grid  grid-cols-3 gap-y-10 z-[10] gap-x-4 relative ">
+                <!--item-->
+                <div class="relative flex items-center  z-0">
+                    <h2 class="font-mullish font-extrabold text-deepBlueHead text-4xl  leading-[3.375rem]">New is the
+                        <span class="text-lightBlue ">
+                        Razorpay
+                        </span> <br> Product suite
+                    </h2>
+                </div>
+
+                <!--card 1-->
+                <div class="p-10
+                 bg-[url(/images/instant-settlement-bg.svg)] w-full max-h[300px] cursor-pointer bg-no-repeat hover:scale-105 transition-all duration-200 hover:bg-[url(./images/instant-settlement-bghover.svg)] bg-white">
+                    <img src="./images/razorpayXicon.svg" alt="" class="w-10 h-10">
+                    <h3 class="font-bold font-mullish pt-4  text-lg">Coperates Card</h3>
+                    <p class="font-mullish py-3 text-gray leading-normal">Simplify your recurring, international and team expenses with savings on every spend. Save upto 10 lacs every month.</p>
+                    <div class="flex cursor-pointer flex-row items-center group">
+                        <a href="" class="font-mullish text-lightBlue500 font-bold group-hover:text-lightBlue  transition-all duration-200"> Know More</a>
+                        <i data-feather="chevron-right" class=" w-5 h-5 text-lightBlue500 group-hover:text-grayBlue transition-all duration-200 "></i>
+                    </div>
+                </div>
+
+                <!--card 2-->
+                <div class="p-10 bg-white
+                bg-[url(/images/instant-settlement-bg.svg)] w-full max-h[300px] cursor-pointer bg-no-repeat hover:scale-105 transition-all duration-200 hover:bg-[url(./images/instant-settlement-bghover.svg)]">
+                    <img src="./images/razorpayXicon.svg" alt="" class="w-10 h-10">
+                    <h3 class="font-bold font-mullish pt-4  text-lg">Coperates Card</h3>
+                    <p class="font-mullish py-3 text-gray leading-normal">Simplify your recurring, international and team expenses with savings on every spend. Save upto 10 lacs every month.</p>
+                    <div class="flex cursor-pointer flex-row items-center group">
+                        <a href="" class="font-mullish text-lightBlue500 font-bold group-hover:text-lightBlue  transition-all duration-200"> Know More</a>
+                        <i data-feather="chevron-right" class=" w-5 h-5 text-lightBlue500 group-hover:text-grayBlue transition-all duration-200 "></i>
+                    </div>
+                </div>
+                <!--card 3-->
+                <div class="p-10
+                bg-[url(/images/instant-settlement-bg.svg)] bg-white w-full max-h[300px] cursor-pointer bg-no-repeat hover:scale-105 transition-all duration-200 hover:bg-[url(./images/instant-settlement-bghover.svg)]">
+                    <img src="./images/razorpayXicon.svg" alt="" class="w-10 h-10">
+                    <h3 class="font-bold font-mullish pt-4  text-lg">Coperates Card</h3>
+                    <p class="font-mullish py-3 text-gray leading-normal">Simplify your recurring, international and team expenses with savings on every spend. Save upto 10 lacs every month.</p>
+                    <div class="flex cursor-pointer flex-row items-center group">
+                        <a href="" class="font-mullish text-lightBlue500 font-bold group-hover:text-lightBlue  transition-all duration-200"> Know More</a>
+                        <i data-feather="chevron-right" class=" w-5 h-5 text-lightBlue500 group-hover:text-grayBlue transition-all duration-200 "></i>
+                    </div>
+                </div>
+                <!--card 4-->
+                <div class="p-10 bg-white
+                bg-[url(/images/instant-settlement-bg.svg)] w-full max-h[300px] cursor-pointer bg-no-repeat hover:scale-105 transition-all duration-200 hover:bg-[url(./images/instant-settlement-bghover.svg)]">
+                    <img src="./images/razorpayXicon.svg" alt="" class="w-10 h-10">
+                    <h3 class="font-bold font-mullish pt-4  text-lg">Coperates Card</h3>
+                    <p class="font-mullish py-3 text-gray leading-normal">Simplify your recurring, international and team expenses with savings on every spend. Save upto 10 lacs every month.</p>
+                    <div class="flex cursor-pointer flex-row items-center group">
+                        <a href="" class="font-mullish text-lightBlue500 font-bold group-hover:text-lightBlue  transition-all duration-200"> Know More</a>
+                        <i data-feather="chevron-right" class=" w-5 h-5 text-lightBlue500 group-hover:text-grayBlue transition-all duration-200 "></i>
+                    </div>
+                </div>
+                <!--card 5-->
+                <div class="p-10 bg-white
+                bg-[url(/images/instant-settlement-bg.svg)] w-full max-h[300px] cursor-pointer bg-no-repeat hover:scale-105 transition-all duration-200 hover:bg-[url(./images/instant-settlement-bghover.svg)]">
+                    <img src="./images/razorpayXicon.svg" alt="" class="w-10 h-10">
+                    <h3 class="font-bold font-mullish pt-4  text-lg">Coperates Card</h3>
+                    <p class="font-mullish py-3 text-gray leading-normal">Simplify your recurring, international and team expenses with savings on every spend. Save upto 10 lacs every month.</p>
+                    <div class="flex cursor-pointer flex-row items-center group">
+                        <a href="" class="font-mullish text-lightBlue500 font-bold group-hover:text-lightBlue  transition-all duration-200"> Know More</a>
+                        <i data-feather="chevron-right" class=" w-5 h-5 text-lightBlue500 group-hover:text-grayBlue transition-all duration-200 "></i>
+                    </div>
+                </div>
 
 
+
+
+            </div>
+        </div>
+    </section>
+    <!--BLUE SECTION WALI IMAGES-->
+    <section class="w-full  bg-[url(/images/core-features-sectionBg.svg)] bg-no-repeat bg-cover mt-14 relative  py-24">
+        <div class="mx-auto w-11/12 max-w-[1080px ]relative  ">
+
+            <h2 class="font-mullish font-bold  text-2xl   text-white">Features</h2>
+            <div class="w-6 h-1 bg-green-700"></div>
+            <p class="font-mullish text-center max-w-[-450px] text-white mx-auto">Empower your business with all the right tools to accept online payments and provide the best customer experience</p>
+            <div class="grid grid-cols-4 gap-[2rem]  mt-8">
+                <!--card 1-->
+                <div class=" flex gap-4 flex-col">
+                    <img src="./images/instant-activation-icon.svg" class="w-10 h-10" alt="">
+                    <h3 class="font-mullish font-bold  text-lg  text-white ">Instant Activation</h3>
+                    <p class="font-mullish text-white opacity-80">Get activated and transact within 2 minutes. Completely online onboarding with minimum documentation.</p>
+                </div>
+                <!--card2-->
+                <div class=" flex gap-4 flex-col">
+                    <img src="./images/instant-activation-icon.svg" class="w-10 h-10" alt="">
+                    <h3 class="font-mullish font-bold  text-lg   text-white ">Instant Activation</h3>
+                    <p class="font-mullish text-white opacity-80">Get activated and transact within 2 minutes. Completely online onboarding with minimum documentation.</p>
+                </div>
+                <!--card3-->
+                <div class=" flex gap-4 flex-col">
+                    <img src="./images/instant-activation-icon.svg" class="w-10 h-10" alt="">
+                    <h3 class="font-mullish font-bold  text-lg  text-white ">Instant Activation</h3>
+                    <p class="font-mullish text-white opacity-80">Get activated and transact within 2 minutes. Completely online onboarding with minimum documentation.</p>
+                </div>
+
+                <!--card 4-->
+                <div class=" flex gap-4 flex-col">
+                    <img src="./images/instant-activation-icon.svg" class="w-10 h-10" alt="">
+                    <h3 class="font-mullish font-bold  text-lg   text-white ">Instant Activation</h3>
+                    <p class="font-mullish text-white opacity-80">Get activated and transact within 2 minutes. Completely online onboarding with minimum documentation.</p>
+                </div>
+
+                <!--card 5-->
+                <div class=" flex gap-4 flex-col">
+                    <img src="./images/instant-activation-icon.svg" class="w-10 h-10" alt="">
+                    <h3 class="font-mullish font-bold  text-lg   text-white ">Instant Activation</h3>
+                    <p class="font-mullish text-white opacity-80">Get activated and transact within 2 minutes. Completely online onboarding with minimum documentation.</p>
+                </div>
+
+                <!--card 6-->
+                <div class=" flex gap-4 flex-col">
+                    <img src="./images/instant-activation-icon.svg" class="w-10 h-10" alt="">
+                    <h3 class="font-mullish font-bold  text-lg  text-center text-white ">Instant Activation</h3>
+                    <p class="font-mullish text-white opacity-80">Get activated and transact within 2 minutes. Completely online onboarding with minimum documentation.</p>
+                </div>
+                <!--card 7-->
+                <div class=" flex gap-4 flex-col">
+                    <img src="./images/instant-activation-icon.svg" class="w-10 h-10" alt="">
+                    <h3 class="font-mullish font-bold  text-lg   text-white ">Instant Activation</h3>
+                    <p class="font-mullish text-white opacity-80">Get activated and transact within 2 minutes. Completely online onboarding with minimum documentation.</p>
+                </div>
+                <!--card 8-->
+                <div class=" flex gap-4 flex-col">
+                    <img src="./images/instant-activation-icon.svg" class="w-10 h-10" alt="">
+                    <h3 class="font-mullish font-bold  text-lg  text- text-white ">Instant Activation</h3>
+                    <p class="font-mullish text-white opacity-80">Get activated and transact within 2 minutes. Completely online onboarding with minimum documentation.</p>
+                </div>
+
+
+            </div>
+
+        </div>
+
+    </section>
     <script src="node_modules/feather-icons/dist/feather .min.js "></script>
     <script type="module " src="/main.js "></script>
     <script>
