FINAL BLUE CORE SESSION

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="stylesheet" href="style.css">
     <title>RAZORPAY -Best online</title>
+    <style>
+        .corefeaturesection {
+            background-size: 100% 100%;
+            padding-top: 12rem;
+            padding-bottom: 12rem;
+        }
+    </style>
 </head>
+
 
 <body class="overflow-x-hidden">
 
@@ -615,12 +623,14 @@
         </div>
     </section>
     <!--BLUE SECTION WALI IMAGES-->
-    <section class="w-full  bg-[url(/images/core-features-sectionBg.svg)] bg-no-repeat bg-cover mt-14 relative  py-24">
-        <div class="mx-auto w-11/12 max-w-[1080px ]relative  ">
+    <section class="w-full  bg-[url(/images/core-features-sectionBg.svg)] bg-no-repeat bg-cover mt-14 relative  py-24 corefeaturesection">
+        <div class="mx-auto w-11/12 max-w-[1080px ] relative  py-5">
+            <div class=" flex flex-col items-center gap-2">
+                <h2 class="font-mullish font-bold  text-2xl  text-center text-white">Features</h2>
+                <div class="w-6 h-1 bg-green-900 "></div>
 
-            <h2 class="font-mullish font-bold  text-2xl   text-white">Features</h2>
-            <div class="w-6 h-1 bg-green-700"></div>
-            <p class="font-mullish text-center max-w-[-450px] text-white mx-auto">Empower your business with all the right tools to accept online payments and provide the best customer experience</p>
+                <p class="font-mullish text-center max-w-[-450px] text-white mx-auto">Empower your business with all the right tools to accept online payments and provide the best customer experience</p>
+            </div>
             <div class="grid grid-cols-4 gap-[2rem]  mt-8">
                 <!--card 1-->
                 <div class=" flex gap-4 flex-col">
@@ -658,7 +668,7 @@
                 <!--card 6-->
                 <div class=" flex gap-4 flex-col">
                     <img src="./images/instant-activation-icon.svg" class="w-10 h-10" alt="">
-                    <h3 class="font-mullish font-bold  text-lg  text-center text-white ">Instant Activation</h3>
+                    <h3 class="font-mullish font-bold  text-lg   text-white ">Instant Activation</h3>
                     <p class="font-mullish text-white opacity-80">Get activated and transact within 2 minutes. Completely online onboarding with minimum documentation.</p>
                 </div>
                 <!--card 7-->
