--- a/index.html
+++ b/index.html
@@ -14,11 +14,24 @@
             padding-top: 12rem;
             padding-bottom: 12rem;
         }
+        
+        .moveimage {
+            animation: 20s infinite linear moveImage;
+        }
+        
+        @keyframes moveImage {
+            0% {
+                top: 0%;
+            }
+            100% {
+                top: -80%;
+            }
+        }
     </style>
 </head>
 
 
-<body class="overflow-x-hidden">
+<body class="overflow-x-hidden relative w-full ">
 
     <!--NAVBAAR-->
     <nav class="bg-deepBlue ">
@@ -690,6 +703,31 @@
         </div>
 
     </section>
+
+    <!-- JOIN RAZORPAY SECTION-->
+    <section class="bg-[#f5f8fe] relative pt-40 pb-12 -mt-[200px] -z-40">
+        <div class=" w-10/12 max-w-[1080px] mx-auto flex relative flex-row ">
+            <div class=" flex flex-col gap-4 justify-center max-w-[calc(100% -500px)]">
+                <h2 class="font-mullish font-bold text-2xl text-deepBlueHead ">Join the 50,00,000+ businesses using<br> Razorpay </h2>
+                <div class=" w-6 h-1 bg-greenLight"></div>
+                <p class="font-mullish pt-6 opacity-80">We make it easier for you to focus on building great products while we work on simplifying your payments. Become one of us by joining thousands of our happy users and simplify the online payment experience for your customers.</p>
+                <p class="font-mullish mt-3 opacity-80 ">Focus on your business while we handle the complexities of <br> payments for you.</p>
+            </div>
+            <!--RIGHT PART WALA-->
+            <div class=" relative w-[1200px] h-[500px] overflow-y-hidden flex flex-row top-12 mb-10">
+                <div style="background: linear-gradient(180deg,#f4f8ff,#fff0)" class="absolute w-full h-[150px] top-0 z-50"></div>
+                <img src="./images/comanies.png" alt="" class="w-full absolute h-auto object-cover moveimage">
+                <div style="background: linear-gradient(0deg,#f4f8ff,#fff0)" class="absolute w-full h-[50px] bottom-0 z-50"></div>
+            </div>
+
+        </div>
+    </section>
+
+
+
+
+
+
     <script src="node_modules/feather-icons/dist/feather .min.js "></script>
     <script type="module " src="/main.js "></script>
     <script>
