--- a/index.html
+++ b/index.html
@@ -722,8 +722,45 @@
 
         </div>
     </section>
+    <!--testimonial section-->
+    <section class="relative">
+        <div class=" w-11/12 max-w-[1300px] mx-auto relative py-20  flex flex-col gap-5 justify-center items-center">
+            <img src="./images/feature-section1-dottedrows.png" alt="" loading="lazy " class="absolute w-[200px]  top-[8rem] left-[2rem] -z-10  ">
+            <h2 class="font-mullish font-extrabold text-2xl text-center">An Experience <br>People Love to Talk About</h2>
+            <div class=" w-6 h-1 bg-greenLight mx-auto"></div>
+
+            <!-- left button-->
+            <div class="flex flex-row  justify-evenly mt-16">
+                <div class=" ">
+                    <div class="w-[100px] h-[100px] left-0 top-0.5 absolute">
+                        <i data-feather="chevron-left" class=" stroke-[5px] w-6 h-6 md:w-10 md:h-10 text-gray-400 items-center pt-3"></i>
+                    </div>
+                </div>
+                <div class=" ">
+                    <img src="./images/testimonial.jpg" alt="">
+                </div>
+                <div class="">
+                    <img src="./images/quotes.svg" alt="">
+                    <h3>Readymade closed wallet solution for quick refunds</h3>
+                    <a href=""> Learn more</a>
+                    <h3>Lorem dolor</h3>
+                    <p>CEO, XYZ company</p>
+                    <img src="./images/fake-company-logo.png" alt="">
+                </div>
+                <div class="">
+                    <div class="">
+                        <i data-feather="chevron-right " class="stroke-[5px] w-6 h-6 md:w-10 md:h-10 text-gray-400 items-center pt-3"></i>
+                    </div>
+                </div>
+            </div>
+            <!--  6 dot wala section-->
+            <div class="">
+                <div class=""></div>
+            </div>
+        </div>
 
 
+    </section>
 
 
 
