--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             padding-bottom: 12rem;
         }
         
+        .ctasection {
+            background-size: 100% 100%;
+        }
+        
         .moveimage {
             animation: 20s infinite linear moveImage;
         }
@@ -32,6 +36,25 @@
 
 
 <body class="overflow-x-hidden relative w-full ">
+
+    <!-- TOP BANNNER SECTION -->
+
+    <nav class=" w-full h-14">
+        <div class=" flex flex-row justify-between items-center justify-center relative  -z-10">
+            <div>
+                <div class="bg-lightBlue300 -rotate-45 h-24 w-10 z-10 "></div>
+                <div class=""></div>
+            </div>
+            <div class=" flex flex-row gap-1 mb-5">
+                <p class="text-xl text-black font-mullish font-thin mt-1"> RazorpayX Payroll: 3 Clicks ,Payroll Fixed! Automate Payroll now!</p>
+                <button class="text-white font-mullish bg-lightBlue300 rounded-md py-2.5 px-3.5 mb-7 font-bold"> Know more</button>
+            </div>
+            <div class="">
+                <div class="bg-lightBlue300 rotate-45 h-28 w-10  z-10  "></div>
+            </div>
+        </div>
+    </nav>
+
 
     <!--NAVBAAR-->
     <nav class="bg-deepBlue ">
@@ -725,43 +748,109 @@
     <!--testimonial section-->
     <section class="relative">
         <div class=" w-11/12 max-w-[1300px] mx-auto relative py-20  flex flex-col gap-5 justify-center items-center">
-            <img src="./images/feature-section1-dottedrows.png" alt="" loading="lazy " class="absolute w-[200px]  top-[8rem] left-[2rem] -z-10  ">
+            <img src="./images/feature-section1-dottedrows.png" alt="" loading="lazy " class="absolute w-[200px]  top-[10rem] left-[4.3rem] -z-10  ">
             <h2 class="font-mullish font-extrabold text-2xl text-center">An Experience <br>People Love to Talk About</h2>
             <div class=" w-6 h-1 bg-greenLight mx-auto"></div>
 
             <!-- left button-->
-            <div class="flex flex-row  justify-evenly mt-16">
-                <div class=" ">
-                    <div class="w-[100px] h-[100px] left-0 top-0.5 absolute">
+            <button class="w-[100px] h-[100px] bg-[#f4f8ff] rounded-full absolute left-0 top-1/2  flex justify-center items-center">
+                <div class="w-[65%] h-[65%] bg-[#f4f8ff] rounded-full flex justify-center items-center mix-blend-multiply">
                         <i data-feather="chevron-left" class=" stroke-[5px] w-6 h-6 md:w-10 md:h-10 text-gray-400 items-center pt-3"></i>
                     </div>
-                </div>
-                <div class=" ">
-                    <img src="./images/testimonial.jpg" alt="">
-                </div>
-                <div class="">
-                    <img src="./images/quotes.svg" alt="">
-                    <h3>Readymade closed wallet solution for quick refunds</h3>
-                    <a href=""> Learn more</a>
-                    <h3>Lorem dolor</h3>
-                    <p>CEO, XYZ company</p>
-                    <img src="./images/fake-company-logo.png" alt="">
-                </div>
-                <div class="">
-                    <div class="">
-                        <i data-feather="chevron-right " class="stroke-[5px] w-6 h-6 md:w-10 md:h-10 text-gray-400 items-center pt-3"></i>
+                    </button>
+
+
+            <!--right button-->
+            <button class="w-[100px] h-[100px] bg-[#f4f8ff] rounded-full absolute right-0 top-1/2  flex justify-center items-center">
+                <div class="w-[65%] h-[65%] bg-[#f4f8ff] rounded-full flex justify-center items-center mix-blend-multiply">
+                    <i data-feather="chevron-right" class=" stroke-[5px] w-6 h-6 md:w-10 md:h-10 text-gray-400 items-center pt-3"></i>
                     </div>
+            </button>
+
+            <!--main part-->
+
+            <div class=" flex flex-row max-w-[960px] items-center  mx-auto  -my-3 gap-[10rem]">
+                <img src="./images/testimonial.jpg" alt="" loading="lazy" height="320px" width="320px" class=" rounded-xl ">
+                <div class=" max-w-[400px] flex  flex-col mb-[8rem] mt-[10rem] ">
+                    <img src="./images/quotes.svg" alt="" width="35px" height="40px">
+                    <h3 class="font-mullish  text-3xl font-extralight">Readymade closed wallet solution for quick refunds</h3>
+                    <a href="# " class="text-grayText italic underline"> Learn more</a>
+                    <h3 class=" font-mullish text-2xl font-extrabold">Lorem dolor</h3>
+                    <p class="font-mullish font-medium">CEO, XYZ company</p>
+                    <img src="./images/fake-company-logo.png " alt=" " width="80px" height="40px">
                 </div>
             </div>
-            <!--  6 dot wala section-->
-            <div class="">
-                <div class=""></div>
-            </div>
+
+
+        </div>
+        <!--  6 dot wala section-->
+        <div class="flex flex-row mx-auto justify-center space-x-2 -mt-[7rem]">
+            <!--DOTNO1-->
+            <div class=" rounded-full h-[10px] w-[10px] bg-gray-300 "></div>
+            <div class=" rounded-full h-[10px] w-[10px] bg-gray-300 "></div>
+            <div class=" rounded-full h-[10px] w-[10px] bg-gray-300 "></div>
+            <div class=" rounded-full h-[10px] w-[10px] bg-blue-300 "></div>
+            <div class=" rounded-full h-[10px] w-[10px] bg-gray-300 "></div>
+            <div class=" rounded-full h-[10px] w-[10px] bg-gray-300 "></div>
         </div>
 
 
     </section>
 
+    <!--last section-->
+    <section class="bg-[url('./images/CTABg.svg')] w-full h-full  bg-no-repeat bg-cover relative ctasection min-h-[510px]">
+        <div class="w-11/12 max-w-[1080px] relative flex flex-row items-center justify-between space-x-20 mx-auto pt-16">
+            <!--left part wala div-->
+            <div class=" flex flex-col gap-5 max-w-[600px] mt-[4rem] ">
+                <h2 class="font-mullish text-2xl font-bold text-white">Supercharge your business with Razorpay</h2>
+                <div class="h-1 w-6 bg-greenLight"></div>
+                <p class="font-mullish text-white">Sign up now to experience the future of payments and offer <br> customers the best checkout experience.</p>
+                <ul class="flex flex-row flex-wrap gap-8 space-y-2 text-white">
+                    <li class="font-mullish text-white flex flex-row items-end">
+                        <i data-feather="check" class="text-greenLight "></i>
+                        <span>Quick Onboarding</span>
+                    </li>
+                    <li class="font-mullish text-white flex flex-row ">
+                        <i data-feather="check" class="text-greenLight "></i>
+
+                        <span>Access to entire product suite</span>
+                    </li>
+                    <li class="font-mullish text-white flex flex-row ">
+                        <i data-feather="check" class="text-greenLight "></i>
+
+                        <span>API access</span>
+                    </li>
+                    <br>
+                    <li class="font-mullish text-white flex flex-row ">
+                        <i data-feather="check" class="text-greenLight "></i>
+
+                        <span>
+                        24x7 support
+                         </span>
+                    </li>
+                </ul>
+                <button class=" min-w-[32px] font-mullish text-sm font-bold  bg-white text-lightBlue300 border flex rounded-sm items-center place-self-start hover:text-lightBlue500 transition-all duration-200 py-3 px-4 ">
+
+                    Sign up 
+                    <svg
+          viewBox="0 0 24 24 "
+          focusable="false "
+          class="w-[14px] h-[14px] ml-3 "
+        >
+          <path
+            fill="currentColor "
+            d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z "
+          ></path>
+        </svg>
+                </button>
+            </div>
+            <!-- right  side image-->
+            <img src="./images/ctaImg.svg " alt=" " width="240px " height="282px " class="mt-[7rem]">
+        </div>
+    </section>
+
+
+    <!-- FOOTER SECTION-->
 
 
 
