--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
     <!--NAVBAAR-->
     <nav class="bg-deepBlue ">
-        <div class="relative w-[1080px] mx-auto flex  ">
+        <div class="relative w-[1080px] mx-auto flex gap-[4rem] lg:gap-0 ">
             <a href="/ " class="cursor-pointer py-7 pr-7 items-center justify-between ">
-                <img src="./images/logo.svg " width="125px " height="30px " alt="razorpay img " />
+                <img src="./images/logo.svg" width="125px " height="30px" alt="razorpay img " />
             </a>
             <ul class="flex gap-6 mr-12 ">
                 <li class="text-white font-mullish py-7 hover:text-lightBlue cursor-pointer transition-all transition-duration-200 relative group hidden lg:block ">
@@ -99,7 +99,7 @@
               Log in
             </button>
                 <button class="hidden  lg:block   text-lightBlue300 border transition-all hover:text-lightBlue500 h-12 mt-4 font-bold  font-mullish px-4 py-3 rounded text-sm bg-white gap-3 ">
-             <span> Sign up </span><i data-feather="arrow-right" class="text-lightBlue w-4 -mt-1"></i>
+             <span class=""> Sign up </span><i data-feather="arrow-right" class="text-lightBlue w-4 -mt-1"></i>
             </button>
             </div>
         </div>
@@ -186,7 +186,7 @@
             <div class=" w-full grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mt-10 ">
                 <!--BOX1-->
                 <div class=" w-full min-h-[15rem] cursor-pointer relative ">
-                    <img src="./images/payment-link-icon.svg " alt=" " class=" bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8 ] transition-all duration-200 ">
+                    <img src="./images/payment-link-icon.svg" alt=" " class=" bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8 ] transition-all duration-200 ">
                     <!--BOX SHAPE-->
                     <svg viewBox="0 0 349.32501220703125 225 " xmlns="http://www.w3.org/2000/svg " preserveAspectRatio="none " class="svgbox boxstroke-1 stroke-[#818597] h-full w-full absolute z-[9] transition-all duration-200 " style="stroke-opacity:
             0.15 ">
@@ -204,13 +204,13 @@
                         <!--HYPERLINK WALA PART-->
                         <div class=" flex items-center cursor-pointer hover:text-gray-50 transition-all duration-200 ">
                             <a href="# " class="font-mullish font-bold text-lightBlue500 hover:text-grayBlue transition-all duration-200 ">Know More</a>
-                            <i data-feather="chevron-right " class="w-5 h-5 text-lightBlue50 hover:text-grayBlue transition-all duration-200 "></i>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue50 hover:text-grayBlue transition-all duration-200 "></i>
                         </div>
                     </div>
                 </div>
                 <!--BOX2-->
                 <div class=" w-full min-h-[15rem] cursor-pointer relative ">
-                    <img src="./images/payment-link-icon.svg " alt=" " class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8 ] hover:bg-lightBlue transition-all duration-200 ">
+                    <img src="./images/payment-link-icon.svg" alt=" " class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8 ] hover:bg-lightBlue transition-all duration-200 ">
                     <!--BOX SHAPE-->
                     <svg viewBox="0 0 349.32501220703125 225 " xmlns="http://www.w3.org/2000/svg " preserveAspectRatio="none " class=" stroke-1 stroke-[#818597] h-full w-full absolute z-[9] transition-all duration-200 " style="stroke-opacity: 0.15 ">
   <path
@@ -227,7 +227,7 @@
                         <!--HYPERLINK WALA PART-->
                         <div class=" flex items-center cursor-pointer ">
                             <a href="# " class="font-mullish font-bold text-lightBlue500 hover:text-grayBlue transition-all duration-200 ">Know More</a>
-                            <i data-feather="chevron-right " class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
                         </div>
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                         <!--HYPERLINK WALA PART-->
                         <div class=" flex items-center cursor-pointer ">
                             <a href="# " class="font-mullish font-bold text-lightBlue500 hover:text-grayBlue transition-all duration-200 ">Know More</a>
-                            <i data-feather="chevron-right " class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
                         </div>
                     </div>
                 </div>
@@ -273,7 +273,7 @@
                         <!--HYPERLINK WALA PART-->
                         <div class=" flex items-center cursor-pointer ">
                             <a href="# " class="font-mullish font-bold text-lightBlue500 hover:text-grayBlue transition-all duration-200 ">Know More</a>
-                            <i data-feather="chevron-right " class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
                         </div>
                     </div>
                 </div>
@@ -296,7 +296,7 @@
                         <!--HYPERLINK WALA PART-->
                         <div class=" flex items-center cursor-pointer ">
                             <a href="# " class="font-mullish font-bold text-lightBlue500 hover:text-grayBlue transition-all duration-200 ">Know More</a>
-                            <i data-feather="chevron-right " class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
                         </div>
                     </div>
                 </div>
@@ -319,7 +319,7 @@
                         <!--HYPERLINK WALA PART-->
                         <div class=" flex items-center cursor-pointer ">
                             <a href="# " class="font-mullish font-bold text-lightBlue500 hover:text-grayBlue transition-all duration-200 ">Know More</a>
-                            <i data-feather="chevron-right " class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
                         </div>
                     </div>
                 </div>
@@ -414,7 +414,7 @@
                         <!--HYPERLINK WALA PART-->
                         <div class=" flex items-center cursor-pointer hover:text-gray-50 transition-all duration-200 ">
                             <a href="# " class="font-mullish font-bold text-lightBlue500 hover:text-grayBlue transition-all duration-200 ">Know More</a>
-                            <i data-feather="chevron-right " class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
                         </div>
                     </div>
                 </div>
@@ -439,7 +439,7 @@
                         <!--HYPERLINK WALA PART-->
                         <div class=" flex items-center cursor-pointer hover:text-gray-50 transition-all duration-200 ">
                             <a href="# " class="font-mullish font-bold text-lightBlue500 hover:text-grayBlue transition-all duration-200 ">Know More</a>
-                            <i data-feather="chevron-right " class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
                         </div>
                     </div>
                 </div>
@@ -465,7 +465,7 @@
                         <!--HYPERLINK WALA PART-->
                         <div class=" flex items-center cursor-pointer hover:text-gray-50 transition-all duration-200 ">
                             <a href="# " class="font-mullish font-bold text-lightBlue500 hover:text-grayBlue transition-all duration-200 ">Know More</a>
-                            <i data-feather="chevron-right " class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
+                            <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 hover:text-grayBlue transition-all duration-200 "></i>
                         </div>
                     </div>
                 </div>
